--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,10 @@ body {
     text-align: center;
     background: #ddebf8;
     color: #2b2839;
-    border-bottom: 6px solid #d8cefe;
+    border-bottom: 6px solid palegreen;
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px paleturquoise;
+;
         
     /*
     Challenge:
@@ -40,14 +43,9 @@ Find other ways you can personalize
 the design of your business card, e.g.:
 - change the border(s)
 - add border radius
-- shuffle the layout
+- shuffle the layout 
 - shadows        🤯
 - hover effects  🤯🤯
 - animations     🤯🤯🤯
 */
 
-/*
-Final challenge:
-Download the code to your local computer and place it
-in a folder called "business-card"
-*/
